tests/baselines/reference/subtypeReduceBivariance1.errors.txt
tests/cases/compiler/subtypeReduceBivariance1.ts(11,51): error TS2322: Type '(a: number) => void' is not assignable to type '(a: string | number) => void'.
  Types of parameters 'a' and 'a' are incompatible.
    Type 'string | number' is not assignable to type 'number'.
      Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/subtypeReduceBivariance1.ts (1 errors) ====
    interface S {
        f(a: number | string): void;
    }
    declare const S: S;
    function g(a: number): void { }
    
    // Force type resolution
    g;
    S.f;
    
    const arr: Array<(a: number | string) => void> = [g, S.f];
                                                      ~
!!! error TS2322: Type '(a: number) => void' is not assignable to type '(a: string | number) => void'.
!!! error TS2322:   Types of parameters 'a' and 'a' are incompatible.
!!! error TS2322:     Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:       Type 'string' is not assignable to type 'number'.